# Android_SDL_FFMPEG

./: README.md
ffplay/: .gitignore  local.properties
ffplay/app/: build.gradle
ffplay/app/src/main/: AndroidManifest.xml
ffplay/app/src/main/cpp/: CMakeLists.txt
ffplay/app/src/main/cpp/FFMPEG/include/: config.h
ffplay/app/src/main/cpp/src/: CMakeLists.txt
ffplay/app/src/main/cpp/src/ffplay/: config_components.h  ffplay.c
ffplay/app/src/main/java/com/charles/app/: FFPlay.java
ffplay/app/src/main/res/values/: strings.xml
